--- a/Recognition/Recognition.cbp
+++ b/Recognition/Recognition.cbp
@@ -13,7 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="`pkg-config opencv --cflags`" />
 				</Compiler>
+				<Linker>
+					<Add option="`pkg-config opencv --libs`" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="../Release/Recognition/bin/Recognition" prefix_auto="1" extension_auto="1" />
