--- a/Recognition/Recognition.cbp
+++ b/Recognition/Recognition.cbp
@@ -5,16 +5,17 @@
 		<Option title="Recognition" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="FaceSubstraction/;" />
 		<Build>
 			<Target title="Debug">
 				<Option output="../Debug/Recognition/bin/Recognition" prefix_auto="1" extension_auto="1" />
 				<Option object_output="../Debug/Recognition/obj/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option projectIncludeDirsRelation="2" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="`pkg-config opencv --cflags`" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="`pkg-config opencv --libs`" />
@@ -37,11 +38,15 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="include/IFaceSubstractor.h" />
+		<Unit filename="include/AbstractHandThresholder.h" />
+		<Unit filename="include/HaarHSVHandThresholder.h" />
+		<Unit filename="include/HaarHistogramHSVHandThresholder.h" />
+		<Unit filename="include/HandThresholderFactory.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/IFaceSubstractor.cpp">
-			<Option virtualFolder="FaceSubstraction/" />
-		</Unit>
+		<Unit filename="src/AbstractHandThresholder.cpp" />
+		<Unit filename="src/HaarHSVHandThresholder.cpp" />
+		<Unit filename="src/HaarHistogramHSVHandThresholder.cpp" />
+		<Unit filename="src/HandThresholderFactory.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
