--- a/Recognition/Recognition.cbp
+++ b/Recognition/Recognition.cbp
@@ -16,6 +16,7 @@
 					<Add option="-g" />
 					<Add option="`pkg-config opencv --cflags`" />
 					<Add directory="include" />
+					<Add directory="src" />
 				</Compiler>
 				<Linker>
 					<Add option="`pkg-config opencv --libs`" />
@@ -38,12 +39,16 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/AbstractFilter.h" />
+		<Unit filename="include/AbstractHandDetector.h" />
 		<Unit filename="include/AbstractHandThresholder.h" />
+		<Unit filename="include/ContourComparisonHandDetector.h" />
 		<Unit filename="include/HaarHSVHandThresholder.h" />
 		<Unit filename="include/HaarHistogramHSVHandThresholder.h" />
 		<Unit filename="include/HandThresholderFactory.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/AbstractHandThresholder.cpp" />
+		<Unit filename="src/AbstractFilter.cpp" />
+		<Unit filename="src/ContourComparisonHandDetector.cpp" />
 		<Unit filename="src/HaarHSVHandThresholder.cpp" />
 		<Unit filename="src/HaarHistogramHSVHandThresholder.cpp" />
 		<Unit filename="src/HandThresholderFactory.cpp" />
