--- a/Learning/Learning.cbp
+++ b/Learning/Learning.cbp
@@ -14,10 +14,14 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="`pkg-config opencv --cflags`" />
+					<Add directory="include" />
+					<Add directory="src" />
 				</Compiler>
 				<Linker>
 					<Add option="`pkg-config opencv --libs`" />
 					<Add option="`-lboost_filesystem`" />
+					<Add library="boost_filesystem" />
+					<Add library="/usr/lib/libboost_system.so" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -28,6 +32,8 @@
 				<Compiler>
 					<Add option="-O2" />
 					<Add option="`pkg-config opencv --cflags`" />
+					<Add directory="include" />
+					<Add directory="src" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -42,9 +48,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/AbstractLearningModel.h" />
 		<Unit filename="include/AlgorithmTester.h" />
+		<Unit filename="include/SVMLearningModel.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/AlgorithmTester.cpp" />
+		<Unit filename="src/SVMLearningModel.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
