Created better luma thresholding

--- a/Recognition/Recognition.cbp
+++ b/Recognition/Recognition.cbp
@@ -41,39 +41,46 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/AbstractFaceSubstractor.h" />
 		<Unit filename="include/AbstractFilter.h" />
 		<Unit filename="include/AbstractGestureRecognizer.h" />
 		<Unit filename="include/AbstractHandDetector.h" />
 		<Unit filename="include/AbstractHandThresholder.h" />
 		<Unit filename="include/AbstractLearningModel.h" />
+		<Unit filename="include/AdaptiveHandThresholder.h" />
 		<Unit filename="include/ContourComparisonHandDetector.h" />
 		<Unit filename="include/ConvexHullComparisonHandDetector.h" />
+		<Unit filename="include/FaceSubstractorFactory.h" />
 		<Unit filename="include/GestureRecognizerFactory.h" />
-		<Unit filename="include/HaarAdaptiveHandThresholder.h" />
-		<Unit filename="include/HaarHSVHandThresholder.h" />
-		<Unit filename="include/HaarHistogramHSVHandThresholder.h" />
-		<Unit filename="include/HaarLumaHandThresholder.h" />
-		<Unit filename="include/HaarYCbCrEllipseHandThresholder.h" />
-		<Unit filename="include/HaarYCbCrHandThresholder.h" />
+		<Unit filename="include/HSVHandThresholder.h" />
+		<Unit filename="include/HaarFaceSubstractor.h" />
 		<Unit filename="include/HandDetectorFactory.h" />
 		<Unit filename="include/HandThresholderFactory.h" />
+		<Unit filename="include/HistogramHSVHandThresholder.h" />
+		<Unit filename="include/LumaHandThresholder.h" />
+		<Unit filename="include/LumaMeanHandThresholder.h" />
 		<Unit filename="include/SIFTGestureRecognizer.h" />
 		<Unit filename="include/SVMLearningModel.h" />
+		<Unit filename="include/YCbCrEllipseHandThresholder.h" />
+		<Unit filename="include/YCbCrHandThresholder.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/AbstractFilter.cpp" />
+		<Unit filename="src/AdaptiveHandThresholder.cpp" />
 		<Unit filename="src/ContourComparisonHandDetector.cpp" />
 		<Unit filename="src/ConvexHullComparisonHandDetector.cpp" />
+		<Unit filename="src/FaceSubstractorFactory.cpp" />
 		<Unit filename="src/GestureRecognizerFactory.cpp" />
-		<Unit filename="src/HaarAdaptiveHandThresholder.cpp" />
-		<Unit filename="src/HaarHSVHandThresholder.cpp" />
-		<Unit filename="src/HaarHistogramHSVHandThresholder.cpp" />
-		<Unit filename="src/HaarLumaHandThresholder.cpp" />
-		<Unit filename="src/HaarYCbCrEllipseHandThresholder.cpp" />
-		<Unit filename="src/HaarYCbCrHandThresholder.cpp" />
+		<Unit filename="src/HSVHandThresholder.cpp" />
+		<Unit filename="src/HaarFaceSubstractor.cpp" />
 		<Unit filename="src/HandDetectorFactory.cpp" />
 		<Unit filename="src/HandThresholderFactory.cpp" />
+		<Unit filename="src/HistogramHSVHandThresholder.cpp" />
+		<Unit filename="src/LumaHandThresholder.cpp" />
+		<Unit filename="src/LumaMeanHandThresholder.cpp" />
 		<Unit filename="src/SIFTGestureRecognizer.cpp" />
 		<Unit filename="src/SVMLearningModel.cpp" />
+		<Unit filename="src/YCbCrEllipseHandThresholder.cpp" />
+		<Unit filename="src/YCbCrHandThresholder.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
